@@ -1,4 +1,5 @@
 2016-10-08  Kirit Saelensminde  <kirit@felspar.com>
+ * Make hashing digester and hmac digester movable.
  * Add a `set` member to the `jcursor` that overwrites old values in JSON structures.
 
 2016-09-26  Kirit Saelensminde  <kirit@felspar.com>
